--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=1234
 POSTGRES_PORT=5432
 ADMINER_PORT=2087
-POSTGRES_HOST=localhost
+POSTGRES_HOST=db
 
-HOST=localhost
+HOST=0.0.0.0
 BACKEND_PORT=443
+DEBUG=False
