--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ __pycache__
 test.py
 README
 .vscode
+
+node_modules
+.pnp
+.pnp.js
+
+coverage
+
+build
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
