--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
 
   backend:
     container_name: backend
+    environment:
+      TZ: Europe/Moscow
     build:
       context: ./backend
       dockerfile: Dockerfile
