--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,3 +39,22 @@ services:
     depends_on:
       - db
     command: bash -c "alembic upgrade head && cd source && uvicorn main:app --host ${HOST} --port ${BACKEND_PORT}"
+
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    restart: always
+    stdin_open: true
+  
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    ports:
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+    depends_on:
+      - frontend
