--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@types/react-transition-group": "^4.4.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -48,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.4.10"
+    
   }
 }
